--- a/src/assets/css/mypage/reserve.css
+++ b/src/assets/css/mypage/reserve.css
@@ -3,12 +3,59 @@
 /* =========================마이페이지 메인======================= */
 .mypageContainer{}
 .mypageContainer .container{
-    width: 1000px;
-    margin: 0 0 0 500px;
+    width: 1100px;
+    margin: 0 0 0 550px;
 }
+
+/* ========= 마일리지 내역 ========= */
+.mypageContainer .mpUsePointContainer{
+    width: 100%;
+    margin-left: 30px;
+    padding: 30px;
+    margin-bottom: 30px;
+}
+/* 마일리지내역 윗부분 */
+.mypageContainer .mpUsePointContainer .mpupTop{
+    border-bottom: 1px solid #237140;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+}
+.mypageContainer .mpUsePointContainer .mpupTop a{
+    font-weight: bold;
+    font-size: 16px;
+}
+
+/* 마일리지내역 내용 */
+.mypageContainer .mpUsePointContainer .mpupContents{
+    background-color: #fff;
+    border: 1px solid #237140;
+    border-radius: 10px;
+    padding: 30px;
+}
+.mypageContainer .mpUsePointContainer .mpupContents >div{
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+}
+.mypageContainer .mpUsePointContainer .mpupContents >div p:first-child{
+    color: #237140;
+    width: 160px;
+    margin-right: 10px;
+    font-weight: bold;
+
+}
+.mypageContainer .mpUsePointContainer .mpupContents>div p:nth-child(2){
+    color: #f27370;
+    font-weight: bold;
+    font-size: 30px;
+}
+
 /* ========= 예약 내역 ========= */
 .mypageContainer .mpReserveConfirmContainer{
-    width: 1150px;
+    width: 100%;
     /* background-color: palegreen; */
     margin-left: 30px;
     padding: 30px;
@@ -23,11 +70,9 @@
     padding-bottom: 10px;
     margin-bottom: 30px;
 }
-.mypageContainer .mpReserveConfirmContainer .mprcTop h3{}
 .mypageContainer .mpReserveConfirmContainer .mprcTop a{
     font-weight: bold;
     font-size: 16px;
-
 }
 /* 예약내역 내용 */
 .mypageContainer .mpReserveConfirmContainer .mprcContents{
@@ -49,7 +94,7 @@
 
 /* ========= 후기 ========= */
 .mypageContainer .mpReviewConfirmContainer{
-    width: 1150px;
+    width: 100%;
     /* background-color: palegreen; */
     margin-left: 30px;
     padding: 30px;
@@ -117,7 +162,7 @@
 
 /* ========= 알림장 ========= */
 .mypageContainer .mpDiaryConfirmContainer{
-    width: 1150px;
+    width: 100%;
     /* background-color: palegreen; */
     margin-left: 30px;
     padding: 30px;
