--- a/src/assets/css/mypage/mypage.css
+++ b/src/assets/css/mypage/mypage.css
@@ -384,8 +384,8 @@ datalist {
 /* 예약폼 */
 /* reservationForm */
 #reservationForm {
-    width: 1400px;
-    margin: 0 auto;
+    width: 1100px;
+    margin: 0 0 0 550px;
 }
 
 #reservationForm .container div>h1 {
