--- a/src/assets/css/edit/editform.css
+++ b/src/assets/css/edit/editform.css
@@ -359,26 +359,30 @@
     margin-bottom: 30px;
  }
  /* 이용시간 왼쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeLeft{
+ .container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeLeft{
     /* background-color: darkmagenta; */
     margin-right: 100px;
- }
+}
  /* 이용시간 오른쪽 */
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight{
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight{
     /* background-color: lawngreen; */
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents{
     display: flex;
-    margin-bottom: 5px;
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents p:first-child{
-    font-weight: bold;
-    width: 120px;
-    /* margin-right: 20px; */
- }
- .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents p:nth-child(2){
-    color: #666;
- }
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightTitle p{
+     font-weight: bold;
+     width: 120px;
+     margin-bottom: 5px;
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents{
+    /* display: flex; */    
+}
+.container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eTime .eTimeRight .eTimeRightContents textarea{
+    width: 200px;
+    height: 104px;
+    resize: none;
+    overflow: hidden;
+    line-height: 24.5px;
+}
 
 /* 위치 왼쪽 - 오시는길 */
 .container3 .eMidContainer .ePositionContainer .ePositionBox .ePositionLeft .eRoad{
