--- a/src/assets/css/edit/edit.css
+++ b/src/assets/css/edit/edit.css
@@ -180,6 +180,7 @@ font-size: 36px;
 .container2 .eMidContainer .ePriceReviewContainer{
     display: flex;
     justify-content: space-between;
+    flex-direction: row;
     /* background-color: darkgoldenrod; */
     /* width: 1700px; */
     margin: 0 auto 70px;
@@ -221,6 +222,9 @@ font-size: 36px;
 .container2 .eMidContainer .ePriceReviewContainer .eReviewBox{
     /* background-color: navy; */
     width: 700px;
+}
+.container2 .eMidContainer .ePriceReviewContainer .eRight{
+    order: 2;
 }
 .container2 .eMidContainer .ePriceReviewContainer .eReviewBox .eReviewBoxTitle{
     display: flex;
