--- a/src/assets/css/mypage/reserve.css
+++ b/src/assets/css/mypage/reserve.css
@@ -3,7 +3,7 @@
 /* =========================마이페이지 메인======================= */
 .mypageContainer{}
 .mypageContainer .container{
-    width: 1100px;
+    width: 948px;
     margin: 0 0 0 550px;
 }
 
@@ -11,12 +11,12 @@
 .mypageContainer .mpUsePointContainer{
     width: 100%;
     margin-left: 30px;
-    padding: 30px;
+    padding: 30px 0px;
     margin-bottom: 30px;
 }
 /* 마일리지내역 윗부분 */
 .mypageContainer .mpUsePointContainer .mpupTop{
-    border-bottom: 1px solid #237140;
+    border-bottom: 1px solid #333;
     display: flex;
     justify-content: space-between;
     align-items: end;
@@ -58,12 +58,12 @@
     width: 100%;
     /* background-color: palegreen; */
     margin-left: 30px;
-    padding: 30px;
+    padding: 30px 0px;
     margin-bottom: 30px;
 }
 /* 예약내역 윗부분 */
 .mypageContainer .mpReserveConfirmContainer .mprcTop{
-    border-bottom: 1px solid #237140;
+    border-bottom: 1px solid #333;
     display: flex;
     justify-content: space-between;
     align-items: end;
@@ -97,12 +97,12 @@
     width: 100%;
     /* background-color: palegreen; */
     margin-left: 30px;
-    padding: 30px;
+    padding: 30px 0px;
     margin-bottom: 30px;
 }
 /* 후기 윗부분 */
 .mypageContainer .mpReviewConfirmContainer .mprvcTop{
-    border-bottom: 1px solid #237140;
+    border-bottom: 1px solid #333;
     display: flex;
     justify-content: space-between;
     align-items: end;
@@ -165,14 +165,14 @@
     width: 100%;
     /* background-color: palegreen; */
     margin-left: 30px;
-    padding: 30px;
+    padding: 30px 0px;
     margin-bottom: 30px;
 }
 
 
 /* 알림장 윗부분 */
 .mypageContainer .mpDiaryConfirmContainer .mpdcTop{
-    border-bottom: 1px solid #237140;
+    border-bottom: 1px solid #333;
     display: flex;
     justify-content: space-between;
     align-items: end;
@@ -212,7 +212,7 @@
     margin-right: 30px;
     border-right: 1px solid #ddd;
     padding-right: 30px;
-    width: 240px;
+    width: 350px;
 }
 .mypageContainer .mpDiaryConfirmContainer .mpdcContents .mpdcInfo1 p{
     line-height: 30px;
