--- a/src/assets/css/mypage/sidebar.css
+++ b/src/assets/css/mypage/sidebar.css
@@ -1,15 +1,20 @@
 /* 사이드바 */
 .sidebar {
-    /* width: 250px; */
-    width: 240px;
+    width: 280px;
+    min-height: 520px;
+    /* width: 240px; */
     /* height: 1000px; */
-    box-shadow: 15px 5px 5px -15px gray;
+    /* box-shadow: 15px 5px 5px -15px gray; */
     /* border-bottom: 1px solid black; */
     /* background-color: forestgreen; */
     position: fixed;
     top: 138px;
     left: 251.5px;
     z-index: 999;
+    border: 1px solid #ddd;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #fff;
 }
 
 /* 유저 프로필 */
