--- a/src/assets/css/manager/mydiary.css
+++ b/src/assets/css/manager/mydiary.css
@@ -3,8 +3,16 @@
 /* *********************************************************** */
 /* 알림장 */
 /* Mydiary */
+
+
+.myDiary-container {
+    /* width: 1000px; */
+    margin-left: 300px;
+
+    /* padding: 30px 0; */
+}
 #myDiary {
-    width: 100%;
+    width: 1400px;
     margin: 0 auto;
     overflow: hidden; /* Prevents horizontal overflow */
 }
@@ -90,7 +98,7 @@
 }
 
 #myDiary .myDiary02 .petProfile img {
-    width: 100%;
+    width: 250px;
     height: auto;
     border-radius: 20px;
     margin: 20px;
