--- a/src/assets/css/edit/edit.css
+++ b/src/assets/css/edit/edit.css
@@ -22,7 +22,7 @@
   
 .container2 .eImgSlide.wrapper-slide  .img-slide {
     width: 100%;
-    height: 600px;
+    min-height: 700px;
     overflow: hidden;
 }
 .container2 .eImgSlide.wrapper-slide  .img-slide img{
