--- a/src/assets/css/manager/mydiary.css
+++ b/src/assets/css/manager/mydiary.css
@@ -8,7 +8,7 @@
 .myDiary-container {
     /* width: 1000px; */
     margin-left: 300px;
-    /* padding: 30px 0; */
+    padding: 60px 0;
 }
 #myDiary {
     width: 1400px;
@@ -23,8 +23,11 @@
 }
 
 #myDiary h1 {
-    font-size: 30px;
-    margin: 20px 20px 0 50px;
+    display: block;
+    width: 90%;
+    border-bottom: 1px solid #666;
+    padding-bottom: 10px;
+    margin: 0 20px 30px 50px;
 }
 
 #myDiary .title .searchBox {
