--- a/src/assets/css/mypage/mypage.css
+++ b/src/assets/css/mypage/mypage.css
@@ -2,17 +2,14 @@
 /* ********************************************************* */
 /* petAddForm */
 #petAddForm {
-    width: 1400px;
-    height: 1900px;
-    margin: 0 auto;
+    width: 880px;
+    height: 1600px;
+    /* margin: 0 0 0 620px; */
 }
 
 #petAddForm h1 {
-    margin: 20px 20px 0 110px;
-    width: 1300px;
-    /* border-bottom: 1px solid #a7a4a4; */
-    padding-bottom: 20px;
-    font-size: 30px;
+    margin: 30px 20px 0 650px;
+    /* font-size: 30px; */
 }
 
 
@@ -21,11 +18,12 @@
 }
 
 #petAddForm .container form {
-    width: 1300px;
+    width: 880px;
     border-top: 1px solid #a7a4a4;
     /* display: flex; */
-    margin-left: 100px;
-    padding: 50px;
+    margin:10px 20px 0 650px;
+    padding-top: 30px;
+    
 }
 
 
@@ -56,7 +54,7 @@
 }
 
 #petAddForm .filebox label {
-    margin-left: 430px;
+    margin-left: 330px;
     display: inline-block;
     padding: 10px;
     color: white;
@@ -86,8 +84,10 @@
 }
 
 #petAddForm #preview-image {
-    width: 500px;
-    height: 600px;
+    width: 400px;
+    height: 400px;
+    border-radius: 10px;
+   /* position: fixed; */
 }
 
 #petAddForm .petAddFormUnder img {
@@ -96,7 +96,7 @@
 }
 
 #petAddForm .container .detailBox {
-    margin: -20px 0 0 180px;
+    margin: -20px 0 0 50px;
 }
 
 #petAddForm .container .detail {
@@ -224,7 +224,7 @@ datalist {
     color: #236C3F;
     font-weight: bolder;
     font-size: 18px;
-    margin: 100px 0 0 300px;
+    margin: 50px 0 0 200px;
 }
 
 #petAddForm button:active {
@@ -249,25 +249,24 @@ datalist {
 /* reviewForm */
 
 #reviewAddForm {
-    width: 1400px;
+    width: 880px;
     /* height: 1900px; */
-    margin: 0 auto;
+    margin: 0 0 0 550px;
 
 }
 
 
 #reviewAddForm h1 {
-    margin: 20px 20px 0 110px;
-    font-size: 30px;
-    padding-bottom: 20px;
+    margin:30px 0 9px 100px;
+    /* padding-bottom: 5px; */
 }
 
 
 #reviewAddForm .container form {
-    width: 1300px;
+    width: 880px;
     margin-left: 100px;
     border-top: 1px solid #a7a4a4;
-    padding: 50px;
+    padding-top:30px;
 }
 
 #reviewAddForm h2 {
@@ -293,7 +292,7 @@ datalist {
 }
 
 #reviewAddForm .reviewWrite textarea {
-    width: 900px;
+    width: 880px;
     height: 300px;
     padding: 15px;
     resize: none;
@@ -304,13 +303,13 @@ datalist {
     color: #a7a4a4;
 
 }
-
-#reviewAddForm .reviewWrite .add_area {
-    margin-left: 500px;
-    margin-bottom: 80px;
+#reviewAddForm .reviewWrite .add_area{
+    font-size: 15px;
     color: #a7a4a4;
-    font-weight: bold;
+    text-align: end;
+    margin-bottom: 50px;
 }
+
 
 #reviewAddForm .reviewPhoto2 {
     display: flex;
