--- a/src/assets/css/mypage/mypage.css
+++ b/src/assets/css/mypage/mypage.css
@@ -396,6 +396,7 @@ datalist {
     margin: 50px 0;
     display: flex;
     justify-content: space-between;
+    width: 880px;
 }
 #reservationForm .buttonCon span {
     /* margin-right: 20px; */
