ㅇㅅ 예약하기 살짝 수정

--- a/src/assets/css/mypage/mypage.css
+++ b/src/assets/css/mypage/mypage.css
@@ -405,6 +405,8 @@ datalist {
     color: #236C3F;
     font-size: 17px;
     font-weight: bold;
+    display: flex;
+    align-items: center;
 }
 
 #reservationForm .buttonCon button {
