--- a/src/assets/css/manager/insertTime.css
+++ b/src/assets/css/manager/insertTime.css
@@ -356,7 +356,7 @@
     color: #fff;
 }
 .container4 .timeContainer .selectScheduleTimeContainer .plusRtimeContainer .plusRtimeRow button:hover{
-    background-color: #ffd700;
+    background-color: #dfd0b8;
     font-weight: bold;
     color: #000;
 }
