--- a/src/assets/css/potal/signup.css
+++ b/src/assets/css/potal/signup.css
@@ -87,6 +87,9 @@
     border-radius: 5px;
     display: inline-block;
 }
+.signup-form .form-group:nth-child(6) input{
+    width: 270px;
+}
 
 .signup-form .input-container {
     display: flex;
