--- a/src/assets/css/notice/NoticeListView.css
+++ b/src/assets/css/notice/NoticeListView.css
@@ -38,6 +38,11 @@
     padding: 5px 13px;
     margin-right: 35px;
     float: right;
+    background-color: #236C3F;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    cursor: pointer;
 }
 
 /* 검색 키워드 입력창 */
@@ -94,7 +99,7 @@
 
 /* 테이블 마지막 열 - 작성자 */
 #thirdTable{
-    width: 100px;
+    width: 120px;
     text-align: center;
 }
 
