--- a/src/assets/css/notice/NoticeWriteView.css
+++ b/src/assets/css/notice/NoticeWriteView.css
@@ -1,77 +1,73 @@
 /* 전체 */
 #noticeWriteContentAll{
-    padding: 20px 30px;
+    padding: 40px 30px;
     margin-left: auto;
     margin-right: auto;
     width: 1000px;
 }
 
-/* 테이블 전체 */
-#noticeWriteContentAll table{
-    margin-left: auto;
-    margin-right: auto;
+
+
+/* 제목 */
+#noticeWriteTitlePart{
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+}
+#writeTitle{
+    padding: 2px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     width: 100%;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 25px;
+    word-break: break-all;
 }
 
-/* 테이블 헤드 */
-#noticeWriteContentAll thead{
-    float: left;
+
+
+/* 해당 글 내용 */
+#noticeWriteContentPart{
+    border-bottom: 1px solid #ddd;
 }
-#noticeWriteContentAll th{
-    padding: 10px 25px;
-    display: block;
-    background-color: rgb(208, 208, 208);
-    border-collapse: collapse;
+#writeContent{
+    padding: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+    height: 400px;
+    min-height: 350px;
+    font-size: 15px;
     font-weight: normal;
-    text-align: center;
-}
-#noticeWriteContentAll th:last-child{
-    border-top: 1px solid #777;
-}
-#noticeWriteContentAll #noticeWriteTitle{
-    height: 40px;
-}
-#noticeWriteContentAll #noticeWriteContent{
-    padding-top: 165px;
-    height: 400px;
-}
-
-/* 테이블 바디 */
-#noticeWriteContentAll tbody{
-    display: block;
-    overflow-x: hidden;
-}
-#noticeWriteContentAll td{
-    display: block;
-}
-#noticeWriteContentAll #writeTitle{
-    width: 840px;
-    height: 40px;
-    resize: none;
-}
-#noticeWriteContentAll #writeContent{
-    width: 840px;
-    height: 400px;
+    vertical-align: middle;
+    overflow-y: auto;
     resize: none;
 }
 
-/* 버튼 묶음 */
-#noticeWriteContentAll #btnGroup{
-    display: flex;
+#writeBtnGroup{
+    margin-top: 20px;
     text-align: center;
     vertical-align: middle;
 }
-/* 삭제 버튼 */
-#btnRemove{
+/* 취소 버튼 */
+#btnCancel{
     padding: 7px 15px;
-    margin-left: 370px;
-    margin-right: 50px;
-    float: left;
+    margin-right: 20px;
+    background-color: #236C3F;
+    border: none;
+    border-radius: 4px;
+    color: white;
     cursor: pointer;
+    text-align: center;
 }
-/* 등록 버튼 */
+/* 수정 버튼 */
 #btnWrite{
     padding: 7px 15px;
-    float: right;
+    background-color: #236C3F;
+    border: none;
+    border-radius: 4px;
+    color: white;
     cursor: pointer;
+    cursor: pointer;
+    text-align: center;
 }
